--- a/family/manifest.json
+++ b/family/manifest.json
@@ -98,6 +98,144 @@
       "contentType": "prayer"
     },
     {
+      "id": "prayer-family-14",
+      "path": "/prayers/100.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-15",
+      "path": "/prayers/101.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-16",
+      "path": "/prayers/102.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-17",
+      "path": "/prayers/103.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-18",
+      "path": "/prayers/104.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-19",
+      "path": "/prayers/105.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-20",
+      "path": "/prayers/106.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-21",
+      "path": "/prayers/107.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-22",
+      "path": "/prayers/108.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-23",
+      "path": "/prayers/109.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-24",
+      "path": "/prayers/11.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-25",
+      "path": "/prayers/110.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-26",
+      "path": "/prayers/111.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-27",
+      "path": "/prayers/112.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-28",
+      "path": "/prayers/113.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-29",
+      "path": "/prayers/114.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-30",
+      "path": "/prayers/115.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-31",
+      "path": "/prayers/116.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-32",
+      "path": "/prayers/117.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-33",
+      "path": "/prayers/118.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-34",
+      "path": "/prayers/119.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-35",
+      "path": "/prayers/12.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
+      "id": "prayer-family-36",
+      "path": "/prayers/120.json",
+      "categoryId": "family-prayers",
+      "contentType": "prayer"
+    },
+    {
       "id": "rosary-101",
       "path": "/rosaries/101_growing_faith.json",
       "categoryId": "family-rosaries",
